test/sema/typeck/expr/assign/index-compound-assign-infer-rhs-from-expected-err.dora
struct Addend[T](T)

impl[T] std::traits::Add for Addend[T] {
    fn add(_rhs: Addend[T]): Addend[T] {
        self
    }
}

class Holder {
    values: Array[Addend[Bool]],
}

fn direct(values: Array[Addend[Bool]]) {
    values(0) += Addend(1i32);
}

fn field(holder: Holder) {
    holder.values(0) += Addend(2i32);
}
